--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-info">
-	<p>如果您遇到“internal server error”近请检查您是否完成了 <strong>教学质量评价</strong></></p>
+	<p>网站异常, 正在修复中!</p>
       </div>
       <br>
       {{ form }}
