精简模板,优化搜索引擎结果

--- a/templates/aaa.html
+++ b/templates/aaa.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>index &middot; Got it</title>
+    <title>我们为你Got it &middot; Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="山东理工大学,成绩查询,校外,正方教务系统,四六级成绩查询,学分绩点,考试时间地点,课表,本学期,查询">
+    <meta name="description" content="山东理工大学校外成绩查询,学分绩点查询,四六级成绩查询.">
+    <meta name="author" content="ma6174,zhwei">
 
     <!-- Le styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
