--- a/templates/cet.html
+++ b/templates/cet.html
@@ -6,7 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin" >
       <div class="alert alert-success">
-      姓名多于三个字的只输入前三个字
+        <p>姓名多于三个字的只输入前三个字</p>
       </div>
       {% if  not form.valid: %}
         <p class="alert alert-danger">输入错误:</p>
