--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-info">
-	<p>如果您遇到“internal server error”近 请检查您是否完成了 教学质量评价</p>
+	<p>如果验证码只显示一个字, 请使用其他浏览器, 搜狗浏览器请使用高速模式.</p>
       </div>
       <br>
       {{ form }}
