some change on templates

--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -20,7 +20,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
 
@@ -49,44 +49,48 @@
         </div>
       </div>
     </div>
-	<div style="text-align:center;">
-		<script type="text/javascript">
-			document.write('<a style="display:none!important" id="tanx-a-mm_34979126_3463384_11269475"></a>');
-			tanx_s = document.createElement("script");
-			tanx_s.type = "text/javascript";
-			tanx_s.charset = "gbk";
-			tanx_s.id = "tanx-s-mm_34979126_3463384_11269475";
-			tanx_s.async = true;
-			tanx_s.src = "http://p.tanx.com/ex?i=mm_34979126_3463384_11269475";
-			tanx_h = document.getElementsByTagName("head")[0];
-			if(tanx_h)tanx_h.insertBefore(tanx_s,tanx_h.firstChild);
-		 </script>
-	</div>
-      <hr>
-    <div id="container" class= "container">
-
-      {% block content %}
-        
-      {% endblock %}
-
-  	</div> <!-- /container -->
-    <hr>
-    <center>
-      Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
-      <a href="http://python.org/" target="_blank">python</a>&nbsp;
-      <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
-      Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-      Version:beta 1.0
-    </center>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
-<!-- baidu sitecenter   -->
-    <div style="display: none;">
+    <div style="text-align:center;">
       <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-      </script>
-    </div>
-<!-- baidu sitecenter   -->
-  </body>
-</html>
+        document.write('<a style="display:none!important" id="tanx-a-mm_34979126_3463384_11269475"></a>');
+        tanx_s = document.createElement("script");
+        tanx_s.type = "text/javascript";
+        tanx_s.charset = "gbk";
+        tanx_s.id = "tanx-s-mm_34979126_3463384_11269475";
+        tanx_s.async = true;
+        tanx_s.src = "http://p.tanx.com/ex?i=mm_34979126_3463384_11269475";
+        tanx_h = document.getElementsByTagName("head")[0];
+        if(tanx_h)tanx_h.insertBefore(tanx_s,tanx_h.firstChild);
+        </script>
+      </div>
+      <hr>
+      <div id="container" class= "container">
+        <div>
+          <center>如果我们做的对您有所帮助, 请考虑是否<a href="/donate.html">赞助</a>我们</center>
+          <hr />
+        </div>
+
+        {% block content %}
+
+        {% endblock %}
+
+      </div> <!-- /container -->
+      <hr>
+      <center>
+        Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
+        <a href="http://python.org/" target="_blank">python</a>&nbsp;
+        <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
+        Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
+        Version:beta 1.0
+      </center>
+      <script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
+      <script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
+      <!-- baidu sitecenter   -->
+      <div style="display: none;">
+        <script type="text/javascript">
+          var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+          document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+        </div>
+        <!-- baidu sitecenter   -->
+      </body>
+    </html>
