--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,47 @@
-{% extends "base-search.html" %}
-{% block title %}Got it--正方教务系统查询工具{% endblock %}
+{% extends 'base-index.html' %}
+{% block title %}我们为你Got it{% endblock %}
+
+{% block nav %}
+<li class="active"><a href="/">首页</a></li>
+<li><a href="/notice.html">公告</a></li>
+<li><a href="/comment.html">留言</a></li>
+<li><a href="/donate.html">赞助</a></li>
+{% endblock %}
 
 {% block content %}
-    <center><h1>正方教务系统查询工具</h1></center>
-    <hr>
-    <form name="main" method="post" accept-charset="utf-8" class="form-signin">
-      <div class="alert alert-info">
-	<p>如果验证码只显示一个字, 请使用其他浏览器, 搜狗浏览器请使用高速模式.</p>
-      </div>
-      <br>
-      {{ form }}
-	  </table>
+<div class="jumbotron">
+  <a class="btn btn-large btn-success" href="#">我们为你Got it .</a>
+  <p class="lead"></p>
+</div>
 
-      <center>
-        <button type="submit" class="btn btn-primary">查询</button>&nbsp;
-        <button type="reset" class="btn">重置</button>
-      </center>
-    </form>
-  
+<hr>
+
+<div class="row-fluid marketing">
+  <div class="span6">
+    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+      <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
+      <p>查询本学期课表 成绩以及考试时间.</p>
+      <div class="alert alert-danger">
+        <p>如果您遇到“internal server error”近  请检查您是否完成了 <strong>教学质量评价</strong></></p>
+      </div>
+    </div>
+    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+      <h4><a href="/cet">四六级成绩查询</a></h4>
+      <p>刚刚考完的四六级成绩出来了!!从这里可以查询!!!.</p>
+    </div>
+  </div>
+
+  <div class="span6">
+    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+      <h4><a href="/score">总成绩 学分绩点</a></h4>
+      <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
+    </div>
+  </div>
+  <div class="span6">
+    <div class="well" onclick="location.href='/donate.html#names';" style="cursor:pointer;">
+      <h4><a href="/donate.html#names">网站赞助者名单</a></h4>
+      <p>您的每一分钱都会让<strong>Gotit</strong>做得更好!</p>
+    </div>
+  </div>
+</div>
 {% endblock %}
