--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
 
   <h4><p><a href="http://zhwei.42qu.com" target="_blank">zhwei</a></p></h4>
 
-  <p><strong>QQ:&nbsp;963032551</strong></p>
+  <p><strong>QQ:&nbsp;就留三菱伞儿呜呜妖</strong></p>
   <p><strong>Email:&nbsp;<a href="mailto:zhwei@gotit.asia">zhwei@gotit.asia</a></strong></p>
   <p><strong>贡献</strong>:正方教务系统相关查询</p>
   <h4><p><a href="http://www.cnblogs.com/ma6174/" target="_blank">马伟伟</a></p></h4>
