--- a/templates/ufo_error.html
+++ b/templates/ufo_error.html
@@ -1,4 +1,4 @@
 {% extends "base-search.html" %}
 {% block content %}
-<script type="text/javascript">alert("未知错误,请联系管理员!");top.location="/comment.html"</script>
+<script type="text/javascript">alert("服务器睡着了, 留言叫一下吧^_^!");top.location="/comment.html"</script>
 {% endblock %}
