--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -10,7 +10,8 @@
     <meta name="author" content="ma6174,zhwei">
 
     <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -48,7 +49,6 @@
         margin-top: 28px;
       }
     </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -80,6 +80,7 @@
 
       {% endblock %}
 
+      <div style="clear: both;"></div>
       <hr>
       <div class="footer">
         <center>
@@ -91,8 +92,6 @@
         </center>
       </div>
     </div> <!-- container -->
-    <script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
     <div style="display: none;">
     <!-- baidu sitecenter   -->
@@ -110,18 +109,6 @@
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="/static/js/jquery.js"></script>
-  <script src="/static/js/bootstrap-transition.js"></script>
-  <script src="/static/js/bootstrap-alert.js"></script>
-  <script src="/static/js/bootstrap-modal.js"></script>
-  <script src="/static/js/bootstrap-dropdown.js"></script>
-  <script src="/static/js/bootstrap-scrollspy.js"></script>
-  <script src="/static/js/bootstrap-tab.js"></script>
-  <script src="/static/js/bootstrap-tooltip.js"></script>
-  <script src="/static/js/bootstrap-popover.js"></script>
-  <script src="/static/js/bootstrap-button.js"></script>
-  <script src="/static/js/bootstrap-collapse.js"></script>
-  <script src="/static/js/bootstrap-carousel.js"></script>
-  <script src="/static/js/bootstrap-typeahead.js"></script>
-
+  <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
