--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <div class="row-fluid marketing">
   <div class="span6">
-    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+    <div class="well" onclick="location.href='/zheng';" style="cursor:pointer;">
       <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
       <p>查询本学期课表 成绩以及考试时间.</p>
       {% if alert %}
@@ -27,14 +27,14 @@
       </div>
       {% endif %}
     </div>
-    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+    <div class="well" onclick="location.href='/cet';" style="cursor:pointer;">
       <h4><a href="/cet">四六级成绩查询</a></h4>
       <p>刚刚考完的四六级成绩出来了!!从这里可以查询!!!.</p>
     </div>
   </div>
 
   <div class="span6">
-    <div class="well" onclick="location.href='/';" style="cursor:pointer;">
+    <div class="well" onclick="location.href='/score';" style="cursor:pointer;">
       <h4><a href="/score">总成绩 学分绩点</a></h4>
       <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
     </div>
