--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -10,8 +10,7 @@
     <meta name="author" content="ma6174,zhwei">
 
     <!-- Le styles -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    {% include "css.html" %}
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -80,35 +79,16 @@
 
       {% endblock %}
 
-      <div style="clear: both;"></div>
-      <hr>
-      <div class="footer">
-        <center>
-          Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
-          <a href="http://python.org/" target="_blank">python</a>&nbsp;
-          <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
-          Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-          Version:2.0
-        </center>
-      </div>
+
+      {% include  "footer.html" %}
+
     </div> <!-- container -->
 
-    <div style="display: none;">
-    <!-- baidu sitecenter   -->
-      <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-      </div>
-      <!-- baidu sitecenter   -->
-    </div>
 
-  </div> <!-- /container -->
 
   <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="/static/js/jquery.js"></script>
-  <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+  {% include "js.html" %}
 </body>
 </html>
