初步完成缓存，已经能正常使用，正在重构

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -39,8 +39,8 @@
     <tbody>
       {% for sp in sponsor %}
       <tr>
-        <th>{{ sp[0] }}</th>
-        <td>{{ sp[1] }}&nbsp;元</td>
+        <th>{{ sp }}</th>
+        <td>{{ sponsor[sp] }}&nbsp;元</td>
       </tr>
       {% endfor %}
     </tbody>
