--- a/templates/more.html
+++ b/templates/more.html
@@ -1,25 +1,25 @@
-{% extends 'base-index.html' %}
-{% block title %}我们为你Got it{% endblock %}
+{% extends "base-index.html" %}
+
+{% block title %}
+个人主页
+{% endblock %}
 
 {% block nav %}
-<li class="active"><a href="/">首页</a></li>
+<li><a href="/">首页</a></li>
+  <li class="active"><a href="">个人主页</a></li>
 <li><a href="/notice.html">公告</a></li>
 <li><a href="/comment.html">留言</a></li>
 <li><a href="/donate.html">赞助</a></li>
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
-  <a class="btn btn-large btn-success" href="#">我们为你Got it .</a>
-  <p class="lead"></p>
-</div>
 
-<hr>
+<h2>查询更多</h2>
+
 
 <div class="row-fluid marketing">
   <div class="span6">
-
-    <div class="well" onclick="location.href='/zheng';" style="cursor:pointer;">
+    <div class="well" onclick="location.href='/more/1/{{ time_md5 }}';" style="cursor:pointer;">
       <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
       <p>查询本学期课表 成绩以及考试时间.</p>
       {% if alert %}
@@ -30,31 +30,23 @@
     </div>
     <div class="well" onclick="location.href='/cet';" style="cursor:pointer;">
       <h4><a href="/cet">四六级成绩查询</a></h4>
-      <p>最新四六级成绩</p>
+      <p>刚刚考完的四六级成绩出来了!!从这里可以查询!!!.</p>
     </div>
-    <div class="well" onclick="location.href='/cet/old';" style="cursor:pointer;">
-      <h4><a href="/cet/old">往年四六级成绩</a></h4>
-      <p>往年的四六级成绩，只需要学号就能查询！</p>
-    </div>
-
   </div>
 
   <div class="span6">
-
     <div class="well" onclick="location.href='/score';" style="cursor:pointer;">
       <h4><a href="/score">总成绩 学分绩点</a></h4>
       <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
     </div>
-    <div class="well" onclick="location.href='/lib';" style="cursor:pointer;">
-      <h4><a href="/lib">图书馆借书查询</a></h4>
-      <p>图书馆借书查询.</p>
-    </div>
+  </div>
+  <div class="span6">
     <div class="well" onclick="location.href='/donate.html#names';" style="cursor:pointer;">
       <h4><a href="/donate.html#names">网站赞助者名单</a></h4>
       <p>您的每一分钱都会让<strong>Gotit</strong>做得更好!</p>
     </div>
   </div>
-
 </div>
+
 
 {% endblock %}
