--- a/templates/result.html
+++ b/templates/result.html
@@ -4,29 +4,50 @@
 {% block content %}
 
 {% if jidian %}
-<table border="1" class= "table table-striped table-bordered table-condensed">
-  <tr>
-    <td>
-      <strong>平均学分绩点</strong>
-    </td>
-    <td>
-      <strong>{{ jidian }}</strong>
-    </td>
-    <td>
-      <strong><a href="/help/gpa.html">绩点计算方法</a></strong>
-    </td>
-  </tr>
-</table>
-<h3>各科成绩</h3>
-<hr />
-{% else %}
+  <table border="1" class= "table table-striped table-bordered table-condensed">
+    <tr>
+      <td>
+        <strong>平均学分绩点</strong>
+      </td>
+      <td>
+        <strong>{{ jidian }}</strong>
+      </td>
+      <td>
+        <strong><a href="/help/gpa.html">绩点计算方法</a></strong>
+      </td>
+    </tr>
+  </table>
+{% endif %}
+{% if table %}
+
+  {% if time_md5 %}
+    <b>继续查询: </b>
+    <a href="/more/{{ time_md5 }}/1" class="btn btn-danger">成绩</a>
+    <a href="/more/{{ time_md5 }}/2" class="btn btn-primary">考试时间</a>
+    <a href="/more/{{ time_md5 }}/3" class="btn btn-info">课表</a>
+    <a href="/more/{{ time_md5 }}/4" target='_blank' class="btn btn-success">绩点</a>
+    <a href="/more/{{ time_md5 }}/4" target='_blank'  class="btn">总成绩</a>
+    <a href="/more/{{ time_md5 }}/5" target='_blank'  class="btn btn-inverse">往年CET</a>
+    <hr />
+  {% endif %}
+
+  <table border="1" class= "table table-striped table-bordered table-condensed">
+    {% for i in table %}
+    {{i}}
+    {% endfor %}
+  </table>
+
+{% endif %}
+{% if just_table %}
+
+  <table border="1" class= "table table-striped table-bordered table-condensed">
+    {{ just_table }}
+  </table>
+
 {% endif %}
 
-<table border="1" class= "table table-striped table-bordered table-condensed">
-  {% for i in table %}
-  {{i}}
-  {% endfor %}
-</table>
-<h2 id="error">{{ error }}</h2>
+{% if error %}
+  <h2 id="error">{{ error }}</h2>
+{% endif %}
 
 {% endblock content %}
