--- a/templates/js.html
+++ b/templates/js.html
@@ -1,2 +1,4 @@
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
-<script src="http://libs.baidu.com/bootstrap/2.0.4/js/bootstrap.min.js"></script>
+<!-- <script src="http://libs.baidu.com/bootstrap/2.0.4/js/bootstrap.min.js"></script> -->
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
