--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -62,9 +62,9 @@
     <link rel="shortcut icon" href="/static/ico/favicon.png">
   </head>
 
-  <body>
+  <body class="back-green">
 
-    <div class="container-narrow">
+    <div class="container-narrow" style="background-color:white;">
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
