--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,19 +1,23 @@
-      <div style="clear: both;"></div><hr>
-      <div class="footer">
-        <center>
-          <a href="/api" target="_blank">APIs</a>&nbsp;
-          Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
-          <a href="http://python.org/" target="_blank">python</a>&nbsp;
-          <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
-          Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-          Version:2.0
-        </center>
-        <!-- baidu sitecenter   -->
-        <div style="display: none;">
-          <script type="text/javascript">
-            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-            </script>
-        </div> 
-        <!-- baidu sitecenter   -->
+    <div style="clear: both;"></div>
+    <div id="wrap">
+        <div id="footer">
+          <div class="container">
+            <center  class="text-muted credit">
+              <a href="/api" target="_blank">APIs</a>&nbsp;
+              Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
+              <a href="http://python.org/" target="_blank">python</a>&nbsp;
+              <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
+              Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
+              Version:2.0
+            </center>
+            <!-- baidu sitecenter   -->
+            <div style="display: none;">
+              <script type="text/javascript">
+                var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+                </script>
+            </div> 
+            <!-- baidu sitecenter   -->
+        </div>
       </div><!-- footer -->
+    </div>
