--- a/templates/notice.html
+++ b/templates/notice.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <h2>网站公告</h2>
-<ul class="unstyled">
+<ul class="list-unstyled">
   <li>
   <blockquote class="pull-left">
     <p><strong>山东理工大学教务处教育技术中心小组,现面向大一同学纳新！</strong></p>
