--- a/templates/cet_bae.html
+++ b/templates/cet_bae.html
@@ -7,12 +7,14 @@
     <form name="main" method="post" accept-charset="utf-8" class="form-signin" action="http://zhweitest.duapp.com/cet">
       <div class="alert alert-success">
       姓名多于三个字的只输入前三个字.<br>
-      <strong>查询较慢时可以多点几次 "查询" </strong>
+      <p>查询较慢时可以多点几次 "查询" </p>
       </div>
       {% if  not form.valid: %}
         <p class="alert alert-danger">输入错误:</p>
       {% endif %}
-      {{ form.render() }}
+      {% for d in form.inputs %}
+        <input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control" placeholder="{{ d.description }}" autofocus/>
+      {% endfor %}
       <br>
       <center>
         <button type="submit" class="btn btn-primary">查询</button>&nbsp;
