--- a/templates/js.html
+++ b/templates/js.html
@@ -2,3 +2,4 @@
 <!-- <script src="http://libs.baidu.com/bootstrap/2.0.4/js/bootstrap.min.js"></script> -->
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap-select.min.js"></script>
