--- a/templates/result.html
+++ b/templates/result.html
@@ -30,20 +30,20 @@
     <a href="/more/{{ time_md5 }}/5" target='_blank'  class="btn btn-inverse">往年CET</a>
     <hr />
   {% endif %}
-
+<div class="table-responsive">
   <table border="1" class= "table table-striped table-bordered table-condensed">
     {% for i in table %}
     {{i}}
     {% endfor %}
   </table>
-
+</div>
 {% endif %}
 {% if just_table %}
-
+<div class="table-responsive">
   <table border="1" class= "table table-striped table-bordered table-condensed">
     {{ just_table }}
   </table>
-
+</div>
 {% endif %}
 
 {% if error %}
