use sessions save time_md5

--- a/templates/key_error.html
+++ b/templates/key_error.html
@@ -1,4 +1,4 @@
 {% extends "base-search.html" %}
 {% block content %}
-<script type="text/javascript">alert("您的会话已过期，请重新登录!");top.location="/zheng"</script>
+<script type="text/javascript">alert("您的会话已过期，或者未登录，请重新登录!");top.location="/login"</script>
 {% endblock %}
