--- a/templates/what_you_need.html
+++ b/templates/what_you_need.html
@@ -16,7 +16,7 @@
   <p>一直想做个校内的信息平台，这个想法被搁置了好久，大家有什么需求可以在下面提出来。</p>
   <p>说到底就一句话: </p>
     <h2>What You Need !!!</h2>
-    <p><b>广纳良言，你敢说，我就能做出来！</b></p>
+    <p><b>广纳良言，你能想出来，我就能做出来！</b></p>
   <p>每一个建议我都会认真考虑(当然，改成绩之类的就免了...)。</p>
   <p>---祝安康！</p>
 
