--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
     <div style="clear: both;"></div>
-    <div id="wrap">
+
         <div id="footer">
           <div class="container">
             <center  class="text-muted credit">
@@ -10,14 +10,6 @@
               Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
               Version:2.0
             </center>
-            <!-- baidu sitecenter   -->
-            <div style="display: none;">
-              <script type="text/javascript">
-                var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-                document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-                </script>
-            </div> 
-            <!-- baidu sitecenter   -->
+          {% include "analytics.html" %}
         </div>
       </div><!-- footer -->
-    </div>
