--- a/templates/index.html
+++ b/templates/index.html
@@ -1,71 +1,24 @@
-{% extends 'base-index.html' %}
+{% extends "base-new.html" %}
+
 {% block title %}我们为你Got it{% endblock %}
 
-{% block nav %}
-<li class="active"><a href="/">首页</a></li>
-<li class="dropdown">
-  <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-      更多<span class="caret"></span>
-    </a>
-  <ul class="dropdown-menu" role="menu">
-    <li><a href="/notice.html">公告</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</li>
-<li><a href="/comment.html">留言</a></li>
-<li><a href="/donate.html">赞助</a></li>
-{% endblock %}
 
 {% block content %}
-<div class="jumbotron bs-navbar">
-  <a class="btn btn-large btn-success" href="/what_you_need.html">What you need ?</a>
-  <p class="lead"></p>
-</div>
 
-<hr>
 
-<div class="row marketing">
-  <div class="col-lg-6">
 
-    <div class="well bs-navbar" onclick="location.href='/zheng';" style="cursor:pointer;">
-      <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
-      <p>查询本学期课表 成绩以及考试时间.</p>
-      {% if alert %}
-      <div class="alert alert-info">
-        <p>{{ alert }}</p>
-      </div>
-      {% endif %}
-    </div>
-    <div class="well bs-navbar" onclick="location.href='/cet';" style="cursor:pointer;">
-      <h4><a href="/cet">四六级成绩查询</a></h4>
-      <p>最新四六级成绩</p>
-    </div>
-    <div class="well bs-navbar" onclick="location.href='/cet/old';" style="cursor:pointer;">
-      <h4><a href="/cet/old">往年四六级成绩</a></h4>
-      <p>往年的四六级成绩，只需要学号就能查询！</p>
-    </div>
-
+<main class="bs-masthead" id="content" role="main">
+  <div class="container">
+    <h1>Let's Got it</h1>
+    <p class="lead">您的支持会让这个网站做到更好。</p>
+    <p class="lead">我们为你Gotit。</p>
+    <p>
+    <a href="/login" class="btn btn-outline-inverse btn-lg" >登录&nbsp;Gotit</a>
+    <a href="/old" class="btn btn-outline-inverse btn-lg" >旧版</a>
+    </p>
   </div>
+</main>
 
-  <div class="col-lg-6">
 
-    <div class="well bs-navbar" onclick="location.href='/score';" style="cursor:pointer;">
-      <h4><a href="/score">总成绩 学分绩点</a></h4>
-      <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
-    </div>
-    <div class="well bs-navbar" onclick="location.href='/lib';" style="cursor:pointer;">
-      <h4><a href="/lib">图书馆借书查询</a></h4>
-      <p>图书馆借书查询.</p>
-    </div>
-    <div class="well bs-navbar" onclick="location.href='/donate.html#names';" style="cursor:pointer;">
-      <h4><a href="/donate.html#names">网站赞助者名单</a></h4>
-      <p>您的每一分钱都会让<strong>Gotit</strong>做得更好!</p>
-    </div>
-  </div>
-
-</div>
 
 {% endblock %}
