--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,12 @@
     <p class="lead">您的支持会让这个网站做到更好。</p>
     <p class="lead">我们为你Gotit。</p>
     <p>
+    {% if context.logged_in %}
+    <a href="/succeed" class="btn btn-outline-inverse btn-lg" >个人中心</a>
+    <a class="btn btn-line" href="/logout">注销</a>
+    {% else %}
     <a href="/login" class="btn btn-outline-inverse btn-lg" >登录&nbsp;Gotit</a>
+    {% endif %}
     <a href="/old" class="btn btn-outline-inverse btn-lg" >旧版</a>
     </p>
   </div>
