--- a/templates/result.html
+++ b/templates/result.html
@@ -22,12 +22,12 @@
 
   {% if time_md5 %}
     <b>继续查询: </b>
-    <a href="/more/{{ time_md5 }}/1" class="btn btn-danger">成绩</a>
-    <a href="/more/{{ time_md5 }}/2" class="btn btn-primary">考试时间</a>
-    <a href="/more/{{ time_md5 }}/3" class="btn btn-info">课表</a>
-    <a href="/more/{{ time_md5 }}/4" target='_blank' class="btn btn-success">绩点</a>
-    <a href="/more/{{ time_md5 }}/4" target='_blank'  class="btn btn-warning">总成绩</a>
-    <a href="/more/{{ time_md5 }}/5" target='_blank'  class="btn btn-default">往年CET</a>
+    <a href="/more/1" class="btn btn-danger">成绩</a>
+    <a href="/more/2" class="btn btn-primary">考试时间</a>
+    <a href="/more/3" class="btn btn-info">课表</a>
+    <a href="/more/4" target='_blank' class="btn btn-success">绩点</a>
+    <a href="/more/4" target='_blank'  class="btn btn-warning">总成绩</a>
+    <a href="/more/5" target='_blank'  class="btn btn-default">往年CET</a>
     <hr />
   {% endif %}
 <div class="table-responsive">
