--- a/templates/succeed.html
+++ b/templates/succeed.html
@@ -1,4 +1,4 @@
-{% extends "base-new.html" %}
+{% extends "base-succeed.html" %}
 
 {% block title %}
 登录
@@ -8,23 +8,18 @@
 {% block content %}
 
 
-<main class="bs-masthead" id="content" role="main">
-
-<h1>登录成功</h1>
   {% if time_md5 %}
     <b>继续查询: </b>
-    <a href="/more/{{ time_md5 }}/1" class="btn btn-danger">成绩</a>
-    <a href="/more/{{ time_md5 }}/2" class="btn btn-primary">考试时间</a>
-    <a href="/more/{{ time_md5 }}/3" class="btn btn-info">课表</a>
-    <a href="/more/{{ time_md5 }}/4" target='_blank' class="btn btn-success">绩点</a>
-    <a href="/more/{{ time_md5 }}/4" target='_blank'  class="btn btn-warning">总成绩</a>
-    <a href="/more/{{ time_md5 }}/5" target='_blank'  class="btn btn-default">往年CET</a>
+    <a href="/more/1" class="btn btn-danger">成绩</a>
+    <a href="/more/2" class="btn btn-primary">考试时间</a>
+    <a href="/more/3" class="btn btn-info">课表</a>
+    <a href="/more/4" target='_blank' class="btn btn-success">绩点</a>
+    <a href="/more/4" target='_blank'  class="btn btn-warning">总成绩</a>
+    <a href="/more/5" target='_blank'  class="btn btn-default">往年CET</a>
     <hr />
   {% else %}
   please  <a class="btn btn-outline-inverse btn-lg" href="/login">登录</a>
   {% endif %}
-
-</main>
 
 
 {% endblock %}
