--- a/templates/base-succeed.html
+++ b/templates/base-succeed.html
@@ -12,24 +12,20 @@
     <link rel="stylesheet" href="/static/css/responsive-nav.css">
     <script src="/static/js/responsive-nav.min.js"></script>
 
+
   </head>
   <body>
 
     <div role="navigation" id="foo" class="nav-collapse">
       <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
+        {% block nav %}
+        {% endblock %}
       </ul>
     </div>
 
     <div role="main" class="main">
       <a href="#nav" class="nav-toggle">Menu</a>
-      <h1>登录成功！</h1>
-
-      <p class="intro">
-      </p>
+      <p class="intro">个人中心</p>
       {% block content %}
       {% endblock %}
     </div>
