--- a/templates/result.html
+++ b/templates/result.html
@@ -1,14 +1,28 @@
-{% extends "base-result.html" %}
+{% extends "base-succeed.html" %}
 
+{% block nav %}
+
+  <li class="active"><a href="/succeed">个人中心</a></li>
+  <li><a href="/more/1">成绩</a></li>
+  <li><a href="/more/4">绩点</a></li>
+  <li><a href="/more/4">总成绩</a></li>
+  <li><a href="/more/3">课表</a></li>
+  <li><a href="/more/5">往年CET</a></li>
+  <li><a href="/more/2">考试时间</a></li>
+  <li><a href="/">返回首页</a></li>
+
+{% endblock %}
 
 {% block content %}
-
+<br>
+<div>
 {% if jidian %}
-  <table border="1" class= "table table-striped table-bordered table-condensed">
+<div class="table-responsive">
+  <table class="self-table" >
     <tr>
-      <td>
+      <th>
         <strong>平均学分绩点</strong>
-      </td>
+      </th>
       <td>
         <strong>{{ jidian }}</strong>
       </td>
@@ -17,37 +31,43 @@
       </td>
     </tr>
   </table>
+</div>  
 {% endif %}
-{% if table %}
 
-  {% if time_md5 %}
-    <b>继续查询: </b>
-    <a href="/more/1" class="btn btn-danger">成绩</a>
-    <a href="/more/2" class="btn btn-primary">考试时间</a>
-    <a href="/more/3" class="btn btn-info">课表</a>
-    <a href="/more/4" target='_blank' class="btn btn-success">绩点</a>
-    <a href="/more/4" target='_blank'  class="btn btn-warning">总成绩</a>
-    <a href="/more/5" target='_blank'  class="btn btn-default">往年CET</a>
-    <hr />
-  {% endif %}
-<div class="table-responsive">
-  <table border="1" class= "table table-striped table-bordered table-condensed">
-    {% for i in table %}
-    {{i}}
-    {% endfor %}
-  </table>
-</div>
+{% if score_table %}
+  <div class="">
+    <table class="base-table score-table" id="all_score">
+      {% for i in score_table %}
+      {{i}}
+      {% endfor %}
+    </table>
+  </div>
 {% endif %}
+
+{% if table %}
+  <div class="">
+
+    <table class="base-table">
+      {% for i in table %}
+      {{i}}
+      {% endfor %}
+    </table>
+
+  </div>
+{% endif %}
+
 {% if just_table %}
-<div class="table-responsive">
-  <table border="1" class= "table table-striped table-bordered table-condensed">
+<!-- <div class="table-responsive"> -->
+  <table  class="self-table">
     {{ just_table }}
   </table>
-</div>
+<!-- </div> -->
 {% endif %}
 
 {% if error %}
   <h2 id="error">{{ error }}</h2>
 {% endif %}
+
+</div>
 
 {% endblock content %}
