--- a/templates/succeed.html
+++ b/templates/succeed.html
@@ -4,22 +4,20 @@
 登录
 {% endblock %}
 
+{% block nav %}
+
+  <li class="active"><a href="/succeed">个人中心</a></li>
+  <li><a href="/more/1">成绩</a></li>
+  <li><a href="/more/4">绩点</a></li>
+  <li><a href="/more/4">总成绩</a></li>
+  <li><a href="/more/3">课表</a></li>
+  <li><a href="/more/5">往年CET</a></li>
+  <li><a href="/more/2">考试时间</a></li>
+  <li><a href="/">返回首页</a></li>
+
+{% endblock %}
 
 {% block content %}
-
-
-  {% if time_md5 %}
-    <b>继续查询: </b>
-    <a href="/more/1" class="btn btn-danger">成绩</a>
-    <a href="/more/2" class="btn btn-primary">考试时间</a>
-    <a href="/more/3" class="btn btn-info">课表</a>
-    <a href="/more/4" target='_blank' class="btn btn-success">绩点</a>
-    <a href="/more/4" target='_blank'  class="btn btn-warning">总成绩</a>
-    <a href="/more/5" target='_blank'  class="btn btn-default">往年CET</a>
-    <hr />
-  {% else %}
-  please  <a class="btn btn-outline-inverse btn-lg" href="/login">登录</a>
-  {% endif %}
 
 
 {% endblock %}
