--- a/templates/result.html
+++ b/templates/result.html
@@ -2,14 +2,13 @@
 
 {% block nav %}
 
-  <li class="active"><a href="/succeed">个人中心</a></li>
-  <li><a href="/more/1">成绩</a></li>
-  <li><a href="/more/4">绩点</a></li>
-  <li><a href="/more/4">总成绩</a></li>
-  <li><a href="/more/3">课表</a></li>
-  <li><a href="/more/5">往年CET</a></li>
-  <li><a href="/more/2">考试时间</a></li>
-  <li><a href="/">返回首页</a></li>
+  <li id="self"><a href="/succeed">个人中心</a></li>
+  <li id="score"><a href="/more/1">成绩</a></li>
+  <li id="all"><a href="/more/4">总成绩</a></li>
+  <li id="seh"><a href="/more/3">课表</a></li>
+  <li id="old-cet"><a href="/more/5">往年CET</a></li>
+  <li id="time"><a href="/more/2">考试时间</a></li>
+  <li id="back"><a href="/">返回首页</a></li>
 
 {% endblock %}
 
@@ -18,7 +17,7 @@
 <div>
 {% if jidian %}
 <div class="table-responsive">
-  <table class="self-table" >
+  <table class="base-table" >
     <tr>
       <th>
         <strong>平均学分绩点</strong>
@@ -58,7 +57,7 @@
 
 {% if just_table %}
 <!-- <div class="table-responsive"> -->
-  <table  class="self-table">
+  <table  class="base-table">
     {{ just_table }}
   </table>
 <!-- </div> -->
@@ -71,3 +70,15 @@
 </div>
 
 {% endblock content %}
+
+{% block foot %}
+
+<script type="text/javascript">
+var t = Number(window.location.href.slice(-1));
+var dic = ["back","score","time","seh","all","old-cet"]
+
+document.getElementById(dic[t]).className="active";
+
+</script>
+
+{% endblock %}
