--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -375,6 +375,14 @@ a:hover {
     width: 55px;
   }
 
+  .cet-old-table tbody th:nth-of-type(1),
+  .cet-old-table tbody tr td:nth-of-type(1),
+  .cet-old-table tbody th:nth-of-type(2),
+  .cet-old-table tbody tr td:nth-of-type(2)
+  {
+    display: none;
+  }
+
 }
 
 /* 横向放置的手机及分辨率更小的设备 */
@@ -412,6 +420,15 @@ a:hover {
   .score-table tbody tr td:nth-of-type(6){
     width: 220px;
   }
-
-
+  .cet-old-table tbody th:nth-of-type(1),
+  .cet-old-table tbody tr td:nth-of-type(1),
+  .cet-old-table tbody th:nth-of-type(2),
+  .cet-old-table tbody tr td:nth-of-type(2),
+  .cet-old-table tbody th:nth-of-type(3),
+  .cet-old-table tbody tr td:nth-of-type(3),
+  .cet-old-table tbody th:nth-of-type(4),
+  .cet-old-table tbody tr td:nth-of-type(4)
+  {
+    display: none;
+  }
 }
